assets/css/style.css
/* ... */
.new-cars-content {
    padding-top: 96px;
}

/*.new-cars-txt*/
.new-cars-txt {
    margin-left: 29px;
    margin-bottom: 30px;
}

.new-cars-txt h2 a {
    font-size: 30px;
    font-weight: 500;
    margin-bottom: 26px;
}

.new-cars-txt h2 a span {
    text-transform: uppercase;
}

.new-cars-para2 {
    margin-top: 30px;
}

.welcome-btn.new-cars-btn {
    width: 176px;
    margin-top: 32px;
}

/*.new-cars-txt*/

/*.owl-dots */
.new-cars .owl-theme .owl-dots .owl-dot span {
    width: 8px;
    height: 8px;
    margin: 0px 4px;
    background: transparent;
    border: 1px solid #6a7781;
    border-radius: 50%;
}

.new-cars .owl-theme .owl-dots .owl-dot.active span,
.new-cars .owl-theme .owl-dots .owl-dot:hover span {
    background: #6a7781;
}

.new-cars .owl-theme .owl-nav.disabled+.owl-dots {
    margin-top: 62px;
}

/*.owl-dots */

/*-------------------------------------
        7. Featured-cars
--------------------------------------*/
.featured-cars {
    padding: 112px 0 120px;
    background-color: #f8f9fb;
}

.featured-cars-content {
    padding-top: 96px;
}

/*.single-featured-cars*/
.featured-img-box {
    border: 1px solid #dadfe9;
}

.featured-cars-img {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 30px;
    height: 220px;
    border-bottom: 1px solid #dadfe9;
    background-color: #fff;
}

.featured-model-info {
    padding: 12px 7px;
}

.featured-model-info p {
    font-size: 12px;
    color: #8c92a0;
    text-transform: capitalize;
}

.featured-mi-span {
    display: inline-block;
    margin: 0 10px;
}

.featured-hp-span {
    display: inline-block;
    margin-right: 10px;
}

.featured-cars-txt {
    margin: 21px 0 47px;
}

.featured-cars-txt h2 a {
    font-size: 16px;
    margin-bottom: 15px;
}

.featured-cars-txt h2 a span {
    text-transform: uppercase;
}

.featured-cars-txt h3 {
    margin-bottom: 10px;
}

.featured-cars-txt h3,
.featured-cars-txt p {
    font-size: 13px;
}

/*.single-featured-cars*/

/*-------------------------------------       
        8. Clients-say 
--------------------------------------*/
.clients-say {
    padding: 65px 0 80px;
    background: #fff;
}

/*single-testimonial-box */
.single-testimonial-box {
    /* padding: 50px 30px 57px;
    text-align: center;
    border: 1px solid #dadfe9; */
    overflow-x: hidden;
    -webkit-transition: .3s;
    -moz-transition: .3s;
    -ms-transition: .3s;
    -o-transition: .3s;
    transition: .3s;
}

/*testimonial-description*/
.clients-say .testimonial-carousel .col-sm-3,
.clients-say .testimonial-carousel .col-xs-12 {
    width: 100%;
    height: auto;
}

/* testimonial-info */
.testimonial-img {
    margin-right: 5px;
    border-radius: 50%;
    -webkit-transition: .3s;
    -moz-transition: .3s;
    -ms-transition: .3s;
    -o-transition: .3s;
    transition: .3s;
}

.testimonial-person h2 a,
.testimonial-person h4 {
    font-size: 16px;
    color: #5e6778;
    font-weight: 600;
}

.testimonial-person h4 {
    margin-top: 10px;
}

/* testimonial-info */


/* testimonial-comment */
.testimonial-comment p {
    font-size: 16px;
    color: #5e6778;
    margin-top: 30px;
    margin-bottom: 25px;
}

/* testimonial-comment */


/*testimonial-description*/
.single-testimonial-box:hover h2 a,
.single-testimonial-box:hover h4,
.single-testimonial-box:hover p {
    color: #fff;
}

.single-testimonial-box:hover {
    background: #444a57;
    border: 1px solid #444a57;
    box-shadow: 0 12px 30px 0px rgba(0, 1, 193, .2);
}

/*owl carousel*/
.clients-say .owl-carousel .owl-stage {
    position: relative;
    padding: 100px 0 40px;
}

.clients-say .owl-carousel .owl-item img {
    display: block;

    height: 100%;

    margin: 0 auto;
}

/*owl carousel*/

/*-------------------------------------
        9. Brand
--------------------------------------*/
.brand {
    padding: 120px 0;
}

.brand-area {
    position: relative;
}

.brand-area .item {
    padding: 0 40px 0;
}

.brand .brand-area .owl-carousel .owl-item img {
    display: block;
    width: 100%;
    height: 72px;
    border-radius: 0;
}

/*-------------------------------------
        10. Blog
--------------------------------------*/

/*-------------------------------------
        12. Contact
--------------------------------------*/
.contact {
    background: #fff;
}

.footer-top {
    padding: 112px 0 72px;
}

/*.footer-logo*/
.footer-logo a,
.footer-logo a:hover,
.footer-logo a:focus {
    display: inline-block;
    color: #000;
    font-size: 24px;
    letter-spacing: 3px;
    /* font-family: 'Rufina', serif; */
    font-weight: 700;
    text-transform: uppercase;
}

.single-footer-widget p {
    font-size: 14px;
    color: #eeeff6;
    max-width: 300px;
    margin: 40px 0 20px;
}

.footer-contact p {
    margin: 0;
    color: #d1d7e9;
}

/*.footer-logo*/

.single-footer-widget {
    margin-bottom: 40px;
}

.single-footer-widget h2 {
    font-size: 14px;
    color: #000;
    text-transform: uppercase;
    margin-bottom: 43px;
}

.single-footer-widget ul li {
    display: inherit;
    -webkit-transition: .5s;
    -moz-transition: .5s;
    -ms-transition: .5s;
    -o-transition: .5s;
    transition: .5s;
}

.single-footer-widget ul li:hover {
    -webkit-transform: translateX(10px);
    -moz-transform: translateX(10px);
    -ms-transform: translateX(10px);
    -o-transform: translateX(10px);
    transform: translateX(10px);
}

.single-footer-widget ul li a {
    font-size: 14px;
    color: #cfd0e3;
    font-weight: 300;
    padding-bottom: 13px;
}

.single-footer-widget ul li a span {
    text-transform: lowercase;
}

.footer-newsletter p {
    color: #aeafc2;
    font-size: 14px;
    font-weight: 300;
    margin: 0 0 15px;
}

/*hm-foot-email*/
.hm-foot-email {
    position: relative;
}

.foot-email-box .form-control {
    background: #fff;
    display: block;
    padding: 15px 20px;
    outline: 0 !important;
    box-shadow: 0 5px 15px rgba(0, 0, 0, .2);
    border: 0;
}
/* ... */

